# coman

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Dockerfile  Jenkinsfile  README.md  coman_test
Documents/: SRS.tex
Documents/Presentation/: database_scheme.drawio  presentation.html
Documents/UML/Class Diagrams/: class_diagram.drawio  high_level_class_diagram.drawio
Documents/UML/Class Diagrams/Models/: models.drawio
Documents/UML/Class diagrams/: user_diagram.drawio
Documents/UML/Use Case Diagrams/: use_case_main.drawio
include/: DatabaseManager.hpp  ProjectRepository.hpp  Task.hpp  TaskRepository.hpp  User.hpp  UserRepository.hpp  project_repository.hpp
include/controllers/: AuthenticationController.hpp  DashboardController.hpp  DocumentationController.hpp  ProjectController.hpp  ProjectMembershipController.hpp  TaskController.hpp  UserController.hpp
include/models/: Project.hpp  Task.hpp
include/repositories/: IProjectMembershipRepository.hpp  IProjectRepository.hpp  ITaskRepository.hpp  IUserRepository.hpp  ProjectMembershipRepository.hpp  ProjectRepository.hpp  TaskRepository.hpp  UserRepository.hpp
include/services/: AuthenticationService.hpp  IAuthenticationService.hpp  IProjectMembershipService.hpp  IProjectService.hpp  ITaskService.hpp  IUserService.hpp  ProjectMembershipService.hpp  ProjectService.hpp  TaskService.hpp  UserService.hpp
include/utils/: ContextUtils.hpp
src/: DatabaseManager.cpp  ProjectRepository.cpp  TaskRepository.cpp  User.cpp  UserRepository.cpp  main  main.cpp  project_repository.cpp
src/controllers/: AuthenticationController.cpp  DashboardController.cpp  DocumentationController.cpp  ProjectController.cpp  ProjectMembershipController.cpp  TaskController.cpp  UserController.cpp
src/repositories/: ProjectMembershipRepository.cpp  ProjectRepository.cpp  TaskRepository.cpp  UserRepository.cpp
src/services/: AuthenticationService.cpp  ProjectMembershipService.cpp  ProjectService.cpp  TaskService.cpp  UserService.cpp
static/Documents/Presentation/: database_scheme.html
static/Documents/UML/Class_Diagrams/: high_level_class_diagram.html
static/Documents/UML/Use_Case_Diagrams/: use_case_main.html
static/css/: test.css
static/js/: nav.js  project_users.js  projects.js  task_drag_drop.js  tasks.js  users.js
templates/: dashboard.html  login.html  navbar.html  presentation.html  profile.html  project_details.html  projects.html  register.html  simplepage.html  users.html
tests/: ProjectRepositoryTest.cpp  UserRepositoryTest.cpp  main.cpp
